--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,700|Lato|Montserrat+Alternates:400,700&amp;subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="Glyphter.css">
 </head>
 <body>
     <div class="left">
-    <h1>Just do it!
-        <span class="span_1">
-        <a href="#"><i class="fas fa-bars"></i></a>    
-        </span>
-    </h1>
-    <div>
-        <a href="#"><i class="far fa-star"></i>General</a><br>
-        <a href="#"><glyph unicode="&#x0047;" d="M0,549C0,549,438.857,549,438.857,549C438.857,549,438.857,987.857,438.857,987.857C438.857,987.857,0,987.857,0,987.857C0,987.857,0,549,0,549C0,549,0,549,0,549M73.143,914.714C73.143,914.714,365.714,914.714,365.714,914.714C365.714,914.714,365.714,622.143,365.714,622.143C365.714,622.143,73.143,622.143,73.143,622.143C73.143,622.143,73.143,914.714,73.143,914.714C73.143,914.714,73.143,914.714,73.143,914.714M585.143,987.857C585.143,987.857,585.143,402.714,585.143,402.714C585.143,402.714,1024,402.714,1024,402.714C1024,402.714,1024,987.857,1024,987.857C1024,987.857,585.143,987.857,585.143,987.857C585.143,987.857,585.143,987.857,585.143,987.857M950.857,475.857C950.857,475.857,658.286,475.857,658.286,475.857C658.286,475.857,658.286,914.714,658.286,914.714C658.286,914.714,950.857,914.714,950.857,914.714C950.857,914.714,950.857,475.857,950.857,475.857C950.857,475.857,950.857,475.857,950.857,475.857M0,37C0,37,438.857,37,438.857,37C438.857,37,438.857,402.714,438.857,402.714C438.857,402.714,0,402.714,0,402.714C0,402.714,0,37,0,37C0,37,0,37,0,37M73.143,329.571C73.143,329.571,365.714,329.571,365.714,329.571C365.714,329.571,365.714,110.143,365.714,110.143C365.714,110.143,73.143,110.143,73.143,110.143C73.143,110.143,73.143,329.571,73.143,329.571C73.143,329.571,73.143,329.571,73.143,329.571M585.143,37C585.143,37,1024,37,1024,37C1024,37,1024,256.429,1024,256.429C1024,256.429,585.143,256.429,585.143,256.429C585.143,256.429,585.143,37,585.143,37C585.143,37,585.143,37,585.143,37M658.286,183.286C658.286,183.286,950.857,183.286,950.857,183.286C950.857,183.286,950.857,110.143,950.857,110.143C950.857,110.143,658.286,110.143,658.286,110.143C658.286,110.143,658.286,183.286,658.286,183.286C658.286,183.286,658.286,183.286,658.286,183.286" class="icon-banners"/>Details</a><br>
-        <a href="#"><i class="fas fa-align-left"></i>Links</a><br>
-        <a href="#"><i class="fas fa-link"></i>Banners</a><br>
-        <a href="#"><i class="fas fa-user"></i>Personal data</a><br>
-        <a href="#"><i class="fas fa-hryvnia"></i>Payout</a><br>
-        <a href="#"><i class="fas fa-undo"></i>Postback</a><br>
-    </div>
+        <h1>Just do it!
+            <span class="span_1">
+            <a href="#"><i class="fas fa-bars"></i></a>    
+            </span>
+        </h1>
+        <div class="navside_bar">
+            <ul>
+                <li><i class="far fa-star"></i><a href="#">General</a></li>
+                <li><i class="fas fa-chart-bar"></i><a href="#">Details</a>
+                <li><i class="fas fa-link"></i><a href="#">Links</a></li>
+                <li><i class="fas fa-align-left"></i><a href="#">Banners</a></li>
+                <li><i class="fas fa-user"></i><a href="#">Personal data</a></li>
+                <li><i class="fas fa-hryvnia"></i><a href="#">Payout</a></li>
+                <li><i class="fas fa-undo"></i><a href="#">Postback</a></li>
+            </ul>
+        </div>
     </div>
     <div class="right">
         <nav>
