--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             </a>    
         </span>
         <ul class="navbar-nav">
-            <li><a href="#"><i class="fas fa-wallet"></i>€ 1.500.00</a>|</li>
+            <li><a href="#"><i class="fas fa-wallet"></i> € 1.500.00</a></li>
             <li><a href="#"><i class="far fa-bell"></i></a></li>
-            <li><a href="#"><i class="far fa-user-circle"></i>John Smith</a></li>
+            <li><a href="#"><i class="far fa-user-circle"></i> John Smith</a></li>
             <li><a href="#"><i class="far fa-hand-point-right"></i></a></li>
         </ul>
     </nav>
     <div id="side-menu" onclick="closeSlideMenu()" class="side-nav">
         <h1>Just do it!</h1>
         <a href="#" class="btn-close">&times;</a>
-        <a href="#"><i class="far fa-star"></i>General</a>
-        <a href="#"><i class="fas fa-chart-bar"></i>Details</a>
-        <a href="#"><i class="fas fa-link"></i>Links</a>
-        <a href="#"><i class="fas fa-align-left"></i>Banners</a>
-        <a href="#"><i class="fas fa-user"></i>Personal data</a>
-        <a href="#"><i class="fas fa-hryvnia"></i>Payout</a>
-        <a href="#"><i class="fas fa-undo"></i>Postback</a>
+        <a href="#"><i class="far fa-star"></i> General</a>
+        <a href="#"><i class="fas fa-chart-bar"></i> Details</a>
+        <a href="#"><i class="fas fa-link"></i> Links</a>
+        <a href="#"><i class="fas fa-align-left"></i> Banners</a>
+        <a href="#"><i class="fas fa-user"></i> Personal data</a>
+        <a href="#"><i class="fas fa-hryvnia"></i> Payout</a>
+        <a href="#"><i class="fas fa-undo"></i> Postback</a>
     </div>
     <div id="main" class="main">
-        <h1>Rsponsive menu</h1>
+        <h1>Responsive menu</h1>
     </div>
     <script script src="js/script.js" charset="UTF-8"></script>
 </body>
