--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -83,6 +83,19 @@
                     <li><span class="sp-green"></span>Earned</li>
                 </ul>
             </div>
+            <div class="row">
+                <h5>Earnings chart</h5>
+                <div class="col-6">
+                        <ul class="legend">
+                            <li><span class="sp-blue"></span>Signups</li>
+                            <li><span class="sp-orange"></span>FTD</li>
+                            <li><span class="sp-green"></span>Earned</li>
+                        </ul>
+                    </div>
+
+
+
+            </div>
         </div>
     </section>
     <section>
