Changes style and html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a>    
         </span>
         <ul class="navbar-nav">
-            <li><a href="#"><i class="icon-wallet"></i> <span class="wallet"> € 1,500.00</span></a></li>
+            <li><a href="#"><i class="icon-wallet"></i> <span class="wallet"> € 1,500.00</span><i class="icon-arrow-down"></i></a></li>
             <li><a href="#"><i class="icon-notification"></i></a></li>
             <li><a href="#"><i class="icon-profile"></i> <span class="span-name">John Smith</span></a></li>
             <li><a href="#"><i class="icon-quit"></i></a></li>
@@ -101,52 +101,52 @@
                         <div class="link_div top-border">
                             <div class="content_link name-one">Home page</div>
                             <div class="content_link"><a href="#">www.homepage.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div> 
                         <div class="link_div">
                             <div class="content_link name-one">Currently offer</div>
                             <div class="content_link"><a href="#">www.currentlyoffer.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Blur pix</div>
                             <div class="content_link"><a href="#">www.blurpix.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Your site</div>
                             <div class="content_link"><a href="#">www.homepage.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Google</div>
                             <div class="content_link"><a href="#">www.google.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Facebook</div>
                             <div class="content_link"><a href="#">www.facebook.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Dashboard</div>
                             <div class="content_link"><a href="#">www.dashboard.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Blurax</div>
                             <div class="content_link"><a href="#">www.blurax.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Piece of wine</div>
                             <div class="content_link"><a href="#">www.pieceofwine.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="link_div">
                             <div class="content_link name-one">Twitter</div>
                             <div class="content_link"><a href="#">www.twitter.com</a></div>
-                            <div class="content_link"><i class="icon-links"></i><i class="icon-trash"></i></div>
+                            <div class="content_link hid"><div class="layer"><i class="icon-links"></i><i class="icon-trash"></i></div></div>
                         </div>
                         <div class="button-second"><button class="btn-lg"> + Add new</button> </div>                      
                     </div>
