Changes media query and html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <form>
                             <div class="input-calendar col-s-6">
                                 <input type="date" class="date-calendar" id="calendar" required>
-                                <input type="date" class="date-calendar cal-right" id="calendar" required>
+                                <input type="date" class="date-calendar cal-right" id="calendartwo" required>
                                 <i class="icon-calendar"></i>
                             </div> 
                             <button class="btn-sm undo-1"><i class="fas fa-undo"></i></button>
@@ -60,7 +60,7 @@
             <hr>
             <div class="container">
                 <div class="row line_dig">
-                    <div class="col-8 col-offset-2 col-s-12">
+                    <div class="col-8 col-offset-2 col-m-10 col-s-12">
                         <div class="digit">
                             <div class="line">Visit signsup <span class="linesp">124</span></div> 
                             <div class="line">Net deposit <span class="linesp">564</span></div>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="row line_dig">
-                    <div class="col-8 col-offset-2 col-s-12">
+                    <div class="col-8 col-offset-2 col-m-10 col-s-12">
                         <div class="digit">
                             <div class="line">FTD <span class="linesp">445</span></div> 
                             <div class="line">Turn over <span class="linesp">432</span></div>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-8 col-offset-2 col-s-12">
+                    <div class="col-8 col-offset-2 col-m-10 col-s-12">
                         <h5 class="header5">Earning chart</h5>
                         <ul class="legend">
                             <li class="firstch"><i class="fas fa-circle"></i>Signups</li>
@@ -97,7 +97,7 @@
             <div class="container">
                 <div class="row">
                     <div class="button"><button class="btn-lg"> + Add new</button> </div>
-                    <div class="col-8 col-offset-2 col-s-12">
+                    <div class="col-8 col-offset-2 col-m-10 col-s-12">
                         <div class="link_div top-border">
                             <div class="content_link name-one">Home page</div>
                             <div class="content_link"><a href="#">www.homepage.com</a></div>
