Changes media query and html

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <br><br><br>
         <section class="main-section">
             <h3 class="title">General statistic</h3>
-            <div class="container">    
-                <div class="row  calendar">
+            <div class="container-fluid">    
+                <div class="row calendar">
                     <div class="col-12">
                         <form>
                             <div class="input-calendar col-s-6">
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <hr>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row line_dig">
                     <div class="col-8 col-offset-2 col-m-10 col-s-12">
                         <div class="digit">
@@ -94,9 +94,9 @@
         </section><br>
         <section class="main-section">
             <h3 class="title">Links</h3>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="button"><button class="btn-lg"> + Add new</button> </div>
+                    <div class="button col-12"><button class="btn-lg"> + Add new</button> </div>
                     <div class="col-8 col-offset-2 col-m-10 col-s-12">
                         <div class="link_div top-border">
                             <div class="content_link name-one">Home page</div>
