Amend form.html and style

--- a/form/form.html
+++ b/form/form.html
@@ -50,7 +50,7 @@
                             <div class=" col-offset-3 col-5 col-s-12 col-m-8">
                                 <div class="field">
                                     <label for="phone">Phone nr</label>
-                                    <input type="tel" id="phone" minlength="9" placeholder="eg. 600100100">
+                                    <input type="tel" id="phone" name="phone-nr" minlength="9" placeholder="eg. 600100100">
                                 </div>
                             </div>
                         </div>
@@ -118,8 +118,9 @@
                         </div>
                     </div>
                     </div>
-                    <hr class="divide"/>
-                    <button type="submit">Save</button>
+                    <div class="submit">
+                        <button type="submit" class="btn-lg">Save</button>
+                    </div>
                 </form>
         </section>
     </div>
