--- a/form/form.html
+++ b/form/form.html
@@ -7,10 +7,10 @@
         <title>Form</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Damion|Open+Sans|Roboto+Condensed" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="icon-font/css/Glyphter.css">
 </head>
-<body>
+<body class="form-page">
     <div class="main">
         <section class="main-section">
             <h3 class="title">Personal data</h3>
