--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar">
         <span class="open-slide" id="top-menu">
-            <a href="#" onclick="openSlideMenu()">
+            <a href="#">
                <svg width="30" height="30">
                    <path d="M0,5 30,5" stroke="#000" stroke-width="5"/>
                    <path d="M0,14 30,14" stroke="#000" stroke-width="5"/>
@@ -28,7 +28,7 @@
             <li><a href="#"><i class="icon-quit"></i></a></li>
         </ul>
     </nav>
-    <div id="side-menu" onclick="closeSlideMenu()" class="side-nav">
+    <div id="side-menu" class="side-nav">
         <h1>Just do it!</h1>
         <a href="#" class="b-close">&times;</a>
         <a href="#"><i class="icon-general"></i> General</a>
